--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Reset Your Password</h1>
-    <form id="resetForm" style="display:none;">
+    <form id="resetForm">
         <input type="password" id="newPassword" placeholder="Enter new password" required>
         <button type="submit">Reset Password</button>
     </form>
@@ -26,7 +26,7 @@
     <script>
         const SUPABASE_URL = 'https://nlkwvxqggvlmjbeympzi.supabase.co'
         const SUPABASE_ANON_KEY = 'your-supabase-anon-key'
-        const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
+        const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
 
         function getURLParameter(name) {
             const urlParams = new URLSearchParams(window.location.search);
@@ -34,22 +34,21 @@
         }
 
         async function handleRedirect() {
-            const token = getURLParameter('token');
-            const type = getURLParameter('type');
+            const code = getURLParameter('code');
 
-            if (!token || type !== 'recovery') {
+            if (!code) {
                 showError('Invalid or expired link. Please request a new password reset link.');
                 return;
             }
 
             try {
-                const { data, error } = await supabase.auth.verifyOtp({ token, type });
+                const { data, error } = await supabaseClient.auth.exchangeCodeForSession(code)
                 if (error) throw error;
 
                 localStorage.setItem('resetToken', data.session.access_token);
-                document.getElementById('resetForm').style.display = 'block';
+                showMessage('Verification successful. You can now reset your password.');
             } catch (error) {
-                showError(`Error verifying token: ${error.message}`);
+                showError(`Error verifying code: ${error.message}`);
             }
         }
 
@@ -77,7 +76,7 @@
             }
 
             try {
-                const { data, error } = await supabase.auth.updateUser(
+                const { data, error } = await supabaseClient.auth.updateUser(
                     { password: newPassword }
                 )
 
