--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         #message { color: green; margin-top: 10px; }
         #error { color: red; margin-top: 10px; }
     </style>
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <h1>Reset Your Password</h1>
@@ -23,67 +24,68 @@
     <div id="message"></div>
     <div id="error"></div>
 
-    <script src="https://unpkg.com/@supabase/supabase-js@2" defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            if (typeof createClient === 'undefined') {
+            const SUPABASE_URL = 'https://nlkwvxqggvlmjbeympzi.supabase.co'
+            const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5sa3d2eHFnZ3ZsbWpiZXltcHppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjY4NjAwOTksImV4cCI6MjA0MjQzNjA5OX0.nbtya7nRxzHtgTnIek3dn21gnhnuXNIfTl-fF7xKUY0'
+            
+            if (typeof supabase === 'undefined') {
                 console.error('Supabase library not loaded properly');
-            } else {
-                const SUPABASE_URL = 'https://nlkwvxqggvlmjbeympzi.supabase.co'
-                const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5sa3d2eHFnZ3ZsbWpiZXltcHppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjY4NjAwOTksImV4cCI6MjA0MjQzNjA5OX0.nbtya7nRxzHtgTnIek3dn21gnhnuXNIfTl-fF7xKUY0'
-                const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
-
-                function getURLParameter(name) {
-                    const urlParams = new URLSearchParams(window.location.search);
-                    return urlParams.get(name);
-                }
-
-                async function handleRedirect() {
-                    const code = getURLParameter('code');
-                    if (!code) {
-                        showError('Invalid or expired link. Please request a new password reset link.');
-                        return;
-                    }
-
-                    try {
-                        const { data, error } = await supabase.auth.exchangeCodeForSession(code);
-                        if (error) throw error;
-                        showMessage('Verification successful. You can now reset your password.');
-                    } catch (error) {
-                        showError(`Error verifying code: ${error.message}`);
-                    }
-                }
-
-                function showError(message) {
-                    document.getElementById('error').textContent = message;
-                }
-
-                function showMessage(message) {
-                    document.getElementById('message').textContent = message;
-                }
-
-                async function resetPassword(event) {
-                    event.preventDefault();
-                    const newPassword = document.getElementById('newPassword').value;
-
-                    if (newPassword.length < 6) {
-                        showError('Password should be at least 6 characters.');
-                        return;
-                    }
-
-                    try {
-                        const { data, error } = await supabase.auth.updateUser({ password: newPassword });
-                        if (error) throw error;
-                        showMessage('Password reset successful. You can now close this page and return to the app.');
-                        document.getElementById('resetForm').style.display = 'none';
-                    } catch (error) {
-                        showError(`Error resetting password: ${error.message}`);
-                    }
-                }
-
-                document.getElementById('resetForm').addEventListener('submit', resetPassword);
-                handleRedirect();
+                return;
             }
+            
+            const client = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
+
+            function getURLParameter(name) {
+                const urlParams = new URLSearchParams(window.location.search);
+                return urlParams.get(name);
+            }
+
+            async function handleRedirect() {
+                const code = getURLParameter('code');
+                if (!code) {
+                    showError('Invalid or expired link. Please request a new password reset link.');
+                    return;
+                }
+
+                try {
+                    const { data, error } = await client.auth.exchangeCodeForSession(code);
+                    if (error) throw error;
+                    showMessage('Verification successful. You can now reset your password.');
+                } catch (error) {
+                    showError(`Error verifying code: ${error.message}`);
+                }
+            }
+
+            function showError(message) {
+                document.getElementById('error').textContent = message;
+            }
+
+            function showMessage(message) {
+                document.getElementById('message').textContent = message;
+            }
+
+            async function resetPassword(event) {
+                event.preventDefault();
+                const newPassword = document.getElementById('newPassword').value;
+
+                if (newPassword.length < 6) {
+                    showError('Password should be at least 6 characters.');
+                    return;
+                }
+
+                try {
+                    const { data, error } = await client.auth.updateUser({ password: newPassword });
+                    if (error) throw error;
+                    showMessage('Password reset successful. You can now close this page and return to the app.');
+                    document.getElementById('resetForm').style.display = 'none';
+                } catch (error) {
+                    showError(`Error resetting password: ${error.message}`);
+                }
+            }
+
+            document.getElementById('resetForm').addEventListener('submit', resetPassword);
+            handleRedirect();
         });
     </script>
 </body>
