--- a/index.html
+++ b/index.html
@@ -4,87 +4,134 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Your Password</title>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <style>
-        body { font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; }
-        h1 { color: #333; }
-        #resetForm { margin-top: 20px; }
-        input[type="password"] { width: 100%; padding: 10px; margin-bottom: 10px; }
-        button { background-color: #4CAF50; color: white; padding: 10px 15px; border: none; cursor: pointer; }
-        #message { color: green; margin-top: 10px; }
-        #error { color: red; margin-top: 10px; }
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        #resetForm {
+            margin-top: 20px;
+            display: none;
+        }
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            cursor: pointer;
+        }
+        #message {
+            color: green;
+            margin-top: 10px;
+        }
+        #error {
+            color: red;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
     <h1>Reset Your Password</h1>
-    <form id="resetForm" style="display:none;">
+    <form id="resetForm">
         <input type="password" id="newPassword" placeholder="Enter new password" required>
         <button type="submit">Reset Password</button>
     </form>
     <div id="message"></div>
     <div id="error"></div>
-
     <script>
-      window.addEventListener('error', function(e) {
-        console.error('Script error:', e);
-      });
-    </script>
-    <script>
-        const SUPABASE_URL = 'https://nlkwvxqggvlmjbeympzi.supabase.co'
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5sa3d2eHFnZ3ZsbWpiZXltcHppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjY4NjAwOTksImV4cCI6MjA0MjQzNjA5OX0.nbtya7nRxzHtgTnIek3dn21gnhnuXNIfTl-fF7xKUY0'
-        const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
+        document.addEventListener('DOMContentLoaded', function() {
+            const SUPABASE_URL = 'https://nlkwvxqggvlmjbeympzi.supabase.co'
+            const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5sa3d2eHFnZ3ZsbWpiZXltcHppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjY4NjAwOTksImV4cCI6MjA0MjQzNjA5OX0.nbtya7nRxzHtgTnIek3dn21gnhnuXNIfTl-fF7xKUY0'
+            
+            const { createClient } = supabase;
+            const supabaseClient = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-        function getURLParameter(name) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(name);
-        }
-
-        async function handleRedirect() {
-            const code = getURLParameter('code');
-            if (!code) {
-                showError('Invalid or expired link. Please request a new password reset link.');
-                return;
+            function getURLParameter(name) {
+                const urlParams = new URLSearchParams(window.location.search);
+                return urlParams.get(name) || new URLSearchParams(window.location.hash.slice(1)).get(name);
             }
 
-            try {
-                const { data, error } = await supabase.auth.exchangeCodeForSession(code);
-                if (error) throw error;
-                showMessage('Verification successful. You can now reset your password.');
-                document.getElementById('resetForm').style.display = 'block';
-            } catch (error) {
-                showError(`Error verifying code: ${error.message}`);
-            }
-        }
+            async function handleRedirect() {
+                console.log("Full URL:", window.location.href);
+                console.log("Search params:", window.location.search);
+                console.log("Hash:", window.location.hash);
 
-        function showError(message) {
-            document.getElementById('error').textContent = message;
-        }
+                const accessToken = getURLParameter('access_token');
+                const type = getURLParameter('type');
+                const error = getURLParameter('error');
+                const errorDescription = getURLParameter('error_description');
 
-        function showMessage(message) {
-            document.getElementById('message').textContent = message;
-        }
-
-        async function resetPassword(event) {
-            event.preventDefault();
-            const newPassword = document.getElementById('newPassword').value;
-
-            if (newPassword.length < 6) {
-                showError('Password should be at least 6 characters.');
-                return;
+                if (accessToken && type === 'recovery') {
+                    console.log("Access token found:", accessToken);
+                    localStorage.setItem('accessToken', accessToken);
+                    document.getElementById('resetForm').style.display = 'block';
+                } else if (error) {
+                    console.log("Error found:", error, "Description:", errorDescription);
+                    showError(`Error: ${error}. ${errorDescription}`);
+                } else {
+                    console.log("No valid parameters found in URL");
+                    showError('Invalid or expired link. Please request a new password reset link.');
+                }
             }
 
-            try {
-                const { data, error } = await supabase.auth.updateUser({ password: newPassword });
-                if (error) throw error;
-                showMessage('Password reset successful. You can now close this page and return to the app.');
-                document.getElementById('resetForm').style.display = 'none';
-            } catch (error) {
-                showError(`Error resetting password: ${error.message}`);
+            function showError(message) {
+                document.getElementById('error').textContent = message;
             }
-        }
 
-        document.getElementById('resetForm').addEventListener('submit', resetPassword);
-        handleRedirect();
+            function showMessage(message) {
+                document.getElementById('message').textContent = message;
+            }
+
+            async function resetPassword(event) {
+                event.preventDefault();
+                const newPassword = document.getElementById('newPassword').value;
+                const accessToken = localStorage.getItem('accessToken');
+
+                if (newPassword.length < 6) {
+                    showError('Password should be at least 6 characters.');
+                    return;
+                }
+
+                if (!accessToken) {
+                    showError('No access token found. Please request a new password reset link.');
+                    return;
+                }
+
+                try {
+                    const { data, error } = await supabaseClient.auth.updateUser(
+                        { password: newPassword },
+                        { accessToken: accessToken }
+                    );
+
+                    if (error) throw error;
+
+                    showMessage('Password reset successful. Redirecting to app...');
+                    document.getElementById('resetForm').style.display = 'none';
+                    localStorage.removeItem('accessToken');
+                    
+                    // Redirect to your app
+                    setTimeout(() => {
+                        window.location.href = 'co.precisionpill://passwordReset?success=true';
+                    }, 2000); // Wait 2 seconds before redirecting
+                } catch (error) {
+                    showError(`Error resetting password: ${error.message}`);
+                }
+            }
+
+            document.getElementById('resetForm').addEventListener('submit', resetPassword);
+            handleRedirect();
+        });
     </script>
 </body>
 </html>
